# nflaunch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yaml
docs/: README.md  architecture.md  cli-reference.md  cloud-resources.md  gcp-setup.md  installation.md  plugins.md  quickstart.md
examples/: params.yaml  resources.config  run_demo.sh
nflaunch/: __init__.py  __main__.py
nflaunch/backends/: base.py
nflaunch/backends/gcp/: batch.py  file.py  job.py
nflaunch/backends/gcp/templates/: gcp.config.template  gcp.extras.template
nflaunch/cli/: formatter.py  main.py  parser.py  validator.py
nflaunch/command/: base.py  nextflow.py
nflaunch/launcher/: nextflow.py
nflaunch/plugins/: __init__.py  base.py
nflaunch/plugins/oncoanalyser/: README.md  oncoanalyser.py
nflaunch/utils/: logger.py  paths.py  registry.py  templates.py  upload.py
tests/: test_dependencies.py  test_gcs_structure.py  test_parser.py  test_validator.py
