[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nflaunch"
version = "0.1.0"
description = "Command-line tool to run Nextflow pipelines in the cloud"
authors = [
    { name = "Rodrigo Jara Calogeropulos", email = "r.a.jara@prinsesmaximacentrum.nl" },
    { name = "GenomicsCore at Princess Maxima Center", email = "genomicscore@prinsesmaximacentrum.nl" },
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "cachetools==5.5.2",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-cloud-batch==0.17.36",
    "google-cloud-core==2.4.3",
    "google-cloud-storage==3.2.0",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.74.0",
    "grpcio-status==1.74.0",
    "idna==3.10",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "requests==2.32.4",
    "rsa==4.9.1",
    "tomli==2.0.3",
    "urllib3==2.5.0",
]

[project.scripts]
nflaunch = "nflaunch.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.setuptools]
packages.find.where = ["."]
include-package-data = true
package-data = { "nflaunch.backends.gcp.templates" = ["*.template"], "nflaunch.plugins.oncoanalyser" = ["README.md"] }

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

# Coverage configuration
[tool.coverage.run]
source = ["nflaunch"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (ruff-format handles this)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
